--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "homepage": "https://github.com/SubwooferApp/Subwoofer#readme",
   "dependencies": {
     "express": "^4.13.4",
-    "q": "^1.4.1"
+    "q": "^1.4.1",
+    "stdio": "^0.2.7"
   }
 }
