--- a/package.json
+++ b/package.json
@@ -17,8 +17,11 @@
   },
   "homepage": "https://github.com/SubwooferApp/Subwoofer#readme",
   "dependencies": {
+    "dotenv": "^2.0.0",
     "express": "^4.13.4",
+    "lodash": "^4.2.1",
     "q": "^1.4.1",
+    "request": "^2.69.0",
     "stdio": "^0.2.7",
     "swig": "^1.4.2"
   }
