--- a/package.json
+++ b/package.json
@@ -17,15 +17,16 @@
   },
   "homepage": "https://github.com/SubwooferApp/Subwoofer#readme",
   "dependencies": {
-    "lodash": "^4.2.1",
-    "request": "^2.69.0",
     "chalk": "^1.1.1",
     "dotenv": "^2.0.0",
     "express": "^4.13.4",
+    "lodash": "^4.2.1",
     "moment": "^2.11.2",
     "mongoose": "^4.4.2",
     "q": "^1.4.1",
+    "request": "^2.69.0",
     "sentencer": "^0.1.5",
+    "serve-favicon": "^2.3.0",
     "stdio": "^0.2.7",
     "swig": "^1.4.2"
   }
